--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "antd": "^3.20.7",
+    "babel-loader": "8.0.5",
     "noty": "^3.2.0-beta",
     "react": "^16.8.6",
+    "react-cookie": "^4.0.1",
     "react-dom": "^16.8.6",
     "react-iframe": "^1.8.0",
     "react-scripts": "3.0.1",
@@ -39,7 +41,6 @@
     "@storybook/addon-actions": "^5.1.10",
     "@storybook/addon-links": "^5.1.10",
     "@storybook/addons": "^5.1.10",
-    "@storybook/react": "^5.1.10",
-    "babel-loader": "^8.0.6"
+    "@storybook/react": "^5.1.10"
   }
 }
