--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.8.6",
     "react-iframe": "^1.8.0",
     "react-scripts": "3.0.1",
+    "react-scroll": "^1.7.12",
     "socket.io-client": "^2.2.0"
   },
   "scripts": {
