--- a/package.json
+++ b/package.json
@@ -22,9 +22,6 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -42,6 +39,8 @@
     "@storybook/addon-actions": "^5.1.10",
     "@storybook/addon-links": "^5.1.10",
     "@storybook/addons": "^5.1.10",
-    "@storybook/react": "^5.1.10"
+    "@storybook/react": "^5.1.10",
+    "prettier": "^1.18.2",
+    "standard": "^13.1.0"
   }
 }
